nova_tests/plan118_5_v3/neg/t13_neg_unsafe_redundant_chain.nv
// Plan 118.5 V3 T13 → RECODED by Plan 138.5 (2026-06-11).
//
// The §V3.4 redundancy check (`unsafe * unsafe`) is retired — the leading
// prefix `unsafe` before `*` now fails first with E_POINTER_PREFIX_MODIFIER.
// Migrate → `*unsafe int` (postfix pointee-unsafe).
//
// EXPECT_COMPILE_ERROR E_POINTER_PREFIX_MODIFIER

module neg.t13_neg_unsafe_redundant_chain

extern "nova" fn p(x unsafe * unsafe int) -> ()
